fix spacing home page min 1024px max 1440px

--- a/src/component/home/home.component.scss
+++ b/src/component/home/home.component.scss
@@ -210,8 +210,8 @@
 @media screen and (min-width: 1024px) and (max-width: 1440px) {
     .container_title_greatings {
         min-width: 426px;
-        padding: 1rem 0;
-        margin: 1rem 0;
+        padding: 1rem 0 0;
+        margin: 1rem 0 0;
     }
     .title_greatings,
     .title_greatings_2 {
